--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -1,37 +1,23 @@
 development:
     adapter: mysql2
-    database: sharetribe_development
+    database: tackhunter_development
     encoding: utf8
-    username: # ADD DATABASE USERNAME
-    password: # ADD DATABASE PASSWORD
-    host: localhost
+    username: tackhunter
+    password: secret
+    port: 3306
+    host: db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
     adapter: mysql2
-    database: sharetribe_test
+    database: tackhunter_test
     encoding: utf8
-    username: # ADD DATABASE USERNAME
-    password: # ADD DATABASE PASSWORD
-    host: localhost
-
-staging:
-    adapter: mysql2
-    database: sharetribe_staging
-    encoding: utf8
-    username: # ADD DATABASE USERNAME
-    password: # ADD DATABASE PASSWORD
-    host: localhost
-
-production:
-    adapter: mysql2
-    database: sharetribe_production
-    encoding: utf8
-    username: # ADD DATABASE USERNAME
-    password: # ADD DATABASE PASSWORD
-    host: localhost
+    username: tackhunter
+    password: secret
+    port: 3306
+    host: db
 
 cucumber:
   <<: *test
