--- a/config/config.defaults.yml
+++ b/config/config.defaults.yml
@@ -32,10 +32,10 @@ default: &default_settings
   # NOTE: in Heroku you can't store files in local system, so S3 should be used
 
   # Default bucket
-  s3_bucket_name:
+  s3_bucket_name: 
 
   # Bucket for files users upload directly to S3. You can add an expiration policy to these files.
-  s3_upload_bucket_name:
+  s3_upload_bucket_name: images
 
   # Server assets directly from the Rails application, defaults to true
   #
@@ -57,10 +57,10 @@ default: &default_settings
   # - 0c84dc78c9435aec606bbf2428c2c476.cloudfront.com
   # - assets%0.your_domain.com
   #
-  asset_host:
+  asset_host: 
 
   # AWS keys
-  aws_access_key_id:
+  aws_access_key_id: 
   aws_secret_access_key:
 
   # This is used with AWS SNS notifications. You need to create "email bounces and complaints" topic to SNS
