--- a/config/config.defaults.yml
+++ b/config/config.defaults.yml
@@ -35,7 +35,7 @@ default: &default_settings
   s3_bucket_name: 
 
   # Bucket for files users upload directly to S3. You can add an expiration policy to these files.
-  s3_upload_bucket_name: images
+  s3_upload_bucket_name: assets.tackhunter-dev.com
 
   # Server assets directly from the Rails application, defaults to true
   #
