--- a/config/config.yml
+++ b/config/config.yml
@@ -25,6 +25,6 @@ production:
   s3_bucket_name: <%= ENV['S3_BUCKET_NAME'] %>
   aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
-  s3_upload_bucket_name: images
+  s3_upload_bucket_name: <%= ENV['S3_BUCKET_NAME'] %>
 
   
