--- a/config/config.yml
+++ b/config/config.yml
@@ -11,6 +11,10 @@
 development:
   # Add local `development` environment configuration overrides here
   domain: "192.168.99.100:3000"
+  s3_bucket_name: <%= ENV['S3_BUCKET_NAME'] %>
+  aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+  s3_upload_bucket_name: <%= ENV['S3_BUCKET_NAME'] %>
 
 
 test:
