--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '2'
 services:
   migration:
     build: .
-    command: '/bin/bash -l -c "bundle install; rake db:create"'
+    command: '/bin/bash -l -c "bundle install; rake db:create rake db:schema:load"'
     volumes:
       - .:/app
     volumes_from:
