--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     depends_on:
       - migration
     build: .
-    command: '/bin/bash -l -c "foreman start -f Procfile.hot"'
+    command: '/bin/bash -l -c "bundle install; rm tmp/pids/server.pid; foreman start -f Procfile.hot"'
     tty: true
     stdin_open: true
     volumes:
@@ -34,6 +34,23 @@ services:
     ports:
       - "3000:3000"
       - "9001:9001"
+  worker:
+    depends_on:
+      - migration
+    build: .
+    command: '/bin/bash -l -c "bundle install; bundle exec rake jobs:work"'
+    tty: true
+    stdin_open: true
+    volumes:
+      - .:/app
+    volumes_from:
+      - container:ruby_gems
+    environment:
+      SPHINX_HOST: search
+      BUTTER_TOKEN: 03cad913262d44335d34f1c28e011a45126c2790
+      AWS_ACCESS_KEY_ID: AKIAJIZ5VYU4FPBOTWLQ
+      AWS_SECRET_ACCESS_KEY: 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
+      S3_BUCKET_NAME: assets.tackhunter-dev.com
   db:
     image: mysql
     volumes_from:
