--- a/config/config.yml
+++ b/config/config.yml
@@ -30,5 +30,6 @@ production:
   aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   s3_upload_bucket_name: <%= ENV['S3_BUCKET_NAME'] %>
+  mail_delivery_method: smtp
 
   
