--- a/config/config.yml
+++ b/config/config.yml
@@ -26,14 +26,9 @@ development:
   # manually to your production paypal account profile.
   paypal_ipn_domain:
   paypal_ipn_protocol: https
-
-
-test:
-  # Add local `test` environment configuration overrides here
-  domain: "192.168.99.100:3000"
-
-staging:
-  # Add local `staging` environment configuration overrides here
+  mail_delivery_method: smtp
+  smtp_email_address: 0.0.0.0
+  smtp_email_port: 1025
 
 production:
   s3_bucket_name: <%= ENV['S3_BUCKET_NAME'] %>
