--- a/config/config.yml
+++ b/config/config.yml
@@ -10,7 +10,7 @@
 
 development:
   # Add local `development` environment configuration overrides here
-  s3_bucket_name: <%= ENV['S3_BUCKET_NAME'] %>
+  s3_bucket_name: assets-local.tackhunter.com
   aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   s3_upload_bucket_name: <%= ENV['S3_BUCKET_NAME'] %>
