--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     depends_on:
       - migration
     build: .
-    command: '/bin/bash -l -c "bundle install; rm tmp/pids/server.pid; foreman start -f Procfile.hot"'
+    command: '/bin/bash -l -c "bundle install; bundle exec rake ts:configure ts:index; searchd --nodetach --pidfile --config config/development.sphinx.conf & rm tmp/pids/server.pid; foreman start -f Procfile.hot"'
     tty: true
     stdin_open: true
     volumes:
@@ -60,16 +60,4 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "true"
 
-  search:
-    build: .
-    command: '/bin/bash -l -c "bundle exec rake ts:configure ts:index; searchd --nodetach --pidfile --config config/development.sphinx.conf"'
-    depends_on: 
-      - migration
-    volumes:
-      - .:/app
-    volumes_from:
-      - container:ruby_gems
-    ports:
-      - "3563:3563"
-    environment:
-      SPHINX_HOST: ""
+ 
